...
                    .foregroundColor(.coinViewRouteButtonActive)
                    .frame(width: 298)
                
                Spacer().frame(height: 60)
                
                HStack(spacing: 12) {
                    PButton(label: "Next", width: 180, height: 48, fontSize: 15, enabled: true) {
                        withAnimation {
                            viewModel.step = .test
                        }
                    }
                    .shadow(color: Color.pButtonShadowColor.opacity(0.1), radius: 6, x: 0, y: 4)
                    
                    Text(viewModel.copiedToClipboard ? "Copied to clipboard!" : "Copy to clipboard")
                        .frame(width: 130)
                        .foregroundColor(viewModel.copiedToClipboard ? Color.green : Color.txListTxType)
                        .contentShape(Rectangle())
                        .onTapGesture {
                            viewModel.copyToClipboard()
                        }
...
