...
    }
}

struct PButton_Previews: PreviewProvider {
    static var previews: some View {
        Group {
            PButton(label: "Continue", width: 124, height: 48, fontSize: 15, enabled: false, action: {})
            PButton(label: "Continue", width: 124, height: 48, fontSize: 15, enabled: true, action: {})
        }
        .frame(width: 124, height: 48)
        .previewLayout(PreviewLayout.sizeThatFits)
        .padding()
    }
...
