...
                            }
                        }
                    }
                }
                .padding(.bottom, 16)
                
                PButton(label: "Create new account", width: 184, height: 32, fontSize: 12, enabled: true) {
                    withAnimation(.easeInOut(duration: 0.2)) {
                        viewModel.state.rootView = .createAccount
                        viewModel.state.modalView = .none
                    }
                }
                .shadow(color: Color.pButtonShadowColor.opacity(0.1), radius: 6, x: 0, y: 4)
...
